<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.inbal.android5778_0920_9377_01.controller.AddCarModelActivity">


    <EditText
        android:id="@+id/CodeModelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_model"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/CompanyNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ModelNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EngineCapacityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/engine_capacity"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="left"
            android:text="@string/gear_box"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/GearBoxSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="left"
        android:text="@string/seats_number"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/SeatsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="left"
            android:text="@string/color"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/ColorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="left"
            android:text="@string/fuel_type"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/FuelTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <Button
        android:id="@+id/AddCarModelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Add Car Model"
        android:textSize="24sp" />

</LinearLayout>
