<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.inbal.android5778_0920_9377_01.controller.AddCarActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="serif"
            android:gravity="left"
            android:text="@string/branch_parking_number"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/BranchParkingNumberSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="left"
            android:text="Car Models:"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/CarModelsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <EditText
        android:id="@+id/KilometersEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/my_kilometers"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/CarNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/CarCostEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_cost"
        android:inputType="number" />

    <Button
        android:id="@+id/AddCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Add Car"
        android:textSize="24sp" />

</LinearLayout>
